# AgentX

./: .env.example  .gitattributes  .gitignore  .productignore  CHANGELOG.md  MANIFEST.in  README-V9.md  README.md  README_AGENTX_QOL_WORKSPACES.md  README_ARCHIVE_CHAT_CONTEXT_FIX.md  README_ASK_AGENTX_FIX_FILE.md  README_AUTO_PATCH_PREVIEW_BRIDGE.md  README_CHAT_ARCHIVE_WORKSPACE.md  README_COPY_BUTTON_FIX.md  README_FRONTEND_ARCHIVE_WORKBENCH.md  README_OLLAMA_FIX.md  README_THREAD_BOUND_WORKSPACE.md  README_WORKBENCH_MODULE_REPAIR.md  README_WORKSPACE_FILE_INSPECTOR.md  README_WORKSPACE_VALIDATION.md  RELEASE.md  install-sol.sh  install.sh  pyproject.toml  start-sol.ps1
SolVersion2/: MANIFEST.in  README.md  pyproject.toml
SolVersion2/config/: sol.toml
SolVersion2/docs/: reliability-demos.md
SolVersion2/plugins/echo_demo/: manifest.json  plugin.py
SolVersion2/skills/repo_triage/: SKILL.md  metadata.json
SolVersion2/sol/: __init__.py  __main__.py  config.py
SolVersion2/sol/cli/: __init__.py  run.py
SolVersion2/sol/core/: action_policy.py  agent.py  audit.py  chunking.py  context.py  executor.py  fs_policy.py  journal.py  llm.py  memory.py  memory_policy.py  memory_stub.py  orchestrator.py  rag_store.py  response_sanitizer.py  result_interpreter.py  runtime_models.py  types.py  unsafe_mode.py  web_policy.py  working_memory.py
SolVersion2/sol/install/: __init__.py  bootstrap.py  deps.py  lifecycle.py  local_profile.py  models.py  ollama.py  platform.py  store.py  ui.py  wizard.py
SolVersion2/sol/jobs/: __init__.py  models.py  planner.py  runner.py  storage.py
SolVersion2/sol/learning/: __init__.py  hints.py
SolVersion2/sol/plugins/: manager.py  models.py
SolVersion2/sol/runtime/: bootstrap.py  paths.py
SolVersion2/sol/skills/: __init__.py  manager.py
SolVersion2/sol/tools/: __init__.py  exec.py  fs.py  hermesbk_tools.py  monster.py  rag.py  registry.py  repo.py  selfcheck.py  tibia.py  vision.py  voice.py  web.py  web_ingest.py  web_ingest_url.py
SolVersion2/tests/: conftest.py  test_bootstrap_install.py  test_cli_run.py  test_doctor_fix.py  test_health.py  test_hint_promotion.py  test_install_lifecycle.py  test_job_runner.py  test_llm_ollama.py  test_platform.py  test_plugin_manager.py  test_release_packaging.py  test_runtime_unification.py  test_service_management.py  test_skill_import.py  test_spoken_response.py
(+268 files in other folders)
